<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">掌上商家</string>
    <string name="login">登录</string>
    <string name="username">手机号：</string>
    <string name="password">密码： </string>
    <string name="forgetword">忘记密码？</string>
    <string name="backward">后台管理</string>
    <string name="bookorder">预定订单</string>
    <string name="menuorder">点餐订单</string>
    <string name="dealorder">团购订单</string>
    <string name="dealticket">团购券验证</string>
    <string name="comment">评价管理</string>
    <string name="worker">员工管理</string>
    <string name="log">日志管理</string>
    <string name="exit">退出</string>
    <string name="orderid">订单号：</string>
    <string name="search">搜索</string>
    <string name="section_sure">待确认</string>
    <string name="section_unpay">待付款</string>
    <string name="section_havepay">已付款</string>
    <string name="section_done">已完成</string>
    <string name="section_used">已消费</string>
    <string name="section_back">已退款</string>
    <string name="sure">确认</string>
    <string name="cancel">取消</string>
    <string name="createtime">下单时间：</string>
    <string name="ordertime">预定时间：</string>
    <string name="detail">详情</string>
    <string name="comment_time">评论时间:</string>
    <string name="comment_detail">评论简介:</string>
    <string name="detail_id">订单号:</string>
    <string name="detail_price">金额:</string>
    <string name="detail_createtime">提交时间:</string>
    <string name="detail_name">姓名:</string>
    <string name="detail_phone">电话号:</string>
    <string name="detail_people">就餐人数:</string>
    <string name="detail_isroom">是否包间:</string>
    <string name="detail_schedule_money">预定金额:</string>
     <string name="detail_dealname">团购名称:</string>
     <string name="detail_dealnumber">团购金额:</string>
    <string name="seecomment">查看评价</string>
    <string name="total_price">总价</string>
     <string name="rmb">￥</string> 
     <string name="report">举报</string> 
     <string name="report_msg">举报信息</string>
     <string name="report_content">举报内容</string>
     <string name="notice">提示！</string> 
     <string name="submit">提交</string> 
     <string name="relate_manager">联系系统管理员</string> 
     <string name="sureifexit">是否要退出？</string> 
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
</resources>