<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/second"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- 头部导航 -->

    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/headbg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@drawable/null_btn_text"
            android:padding="10dp"
            android:src="@drawable/arrow_left" />

        <LinearLayout
            android:id="@+id/ll_s"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/dealorder"
                android:textColor="#FFFFFFFF"
                android:textSize="18sp" />
        </LinearLayout>

        <!-- 头部右边 -->

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <!-- 子菜单选项 -->

        <LinearLayout
            android:id="@+id/layout_bar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/section1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/section_unpay"
                    android:textColor="@color/textcolor_normal"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/mark1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/section1"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/section_bg_normal" />
            </RelativeLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="#dddddd" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/section2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/section_havepay"
                    android:textColor="@color/textcolor_normal"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/mark2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/section2"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/section_bg_normal" />
            </RelativeLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="#dddddd" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/section3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/section_used"
                    android:textColor="@color/textcolor_normal"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/mark3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/section3"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/section_bg_normal" />
            </RelativeLayout>
             <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="#dddddd" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/section4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/section_back"
                    android:textColor="@color/textcolor_normal"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/mark4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/section4"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/section_bg_normal" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.4dp"
        android:background="#dddddd" />

   <com.zsct.store.pulltorefresh.PullToRefreshLayout 
    android:id="@+id/refresh_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include layout="@layout/refresh_head" />
    <!-- 支持所有实现Pullable接口的View -->

    <com.zsct.store.pulltorefresh.PullableListView
        android:id="@+id/orderlist"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </com.zsct.store.pulltorefresh.PullableListView>

</com.zsct.store.pulltorefresh.PullToRefreshLayout>

</LinearLayout>